--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
     <link rel="stylesheet" href="css/index.css" />
     <title>Kuan__HBD</title>
   </head>
@@ -25,9 +24,6 @@
           <img src="img/HAPPY.png" alt="" class="titlehappy" />
           <img src="img/Birthday.png" alt="" class="titlebirthday" />
           <img src="img/to you.png" alt="" class="titletoyou" />
-          <!-- <a class="btn  btn-lg" href="container.html" role="button"
-            >成熟點！24歲了</a
-          > -->
           <!-- Button trigger modal -->
           <button
             type="button"
@@ -52,7 +48,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="staticBackdropLabel">
-                    <i class="bi bi-exclamation-triangle-fill"></i>警告</h5>
+                    <i class="bi bi-exclamation-triangle-fill"></i> 溫馨小叮嚀</h5>
                   <button
                     type="button"
                     class="btn-close"
