--- a/container.html
+++ b/container.html
@@ -62,7 +62,7 @@
           </div>
         </nav>
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-          <strong>注意注意</strong> 說真的 我還沒想到這alert要打什麼：）先關掉吧
+          <strong>注意注意</strong> 說真的 我還沒想到這alert要打什麼：
           <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div>
