--- a/home.html
+++ b/home.html
@@ -13,29 +13,53 @@
       integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="css/container.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/home.css">
     <title>Kuan__HBD</title>
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <nav class="navbar navbar-expand-lg navbar-light ">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="index.html">
+            <img src="img/beer.svg" alt="" class="logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <nav class="nav nav-pills nav-justified">
-              <a class="nav-link "  href="#">ABOUT</a>
-              <a class="nav-link active" aria-current="page" href="home.html">HOME</a>
+              <a class="nav-link" href="#">ABOUT</a>
+              <a class="nav-link active" aria-current="page" href="home.html"
+                >HOME</a
+              >
               <a class="nav-link" href="story.html">STORY</a>
             </nav>
           </div>
         </div>
       </nav>
     </header>
-    
+    <main>
+      <div class="decorate">
+        <img src="img/ballonWhite.png" alt="" class="ballonWhite1" />
+        <img src="img/balloonBlack.png" alt="" class="balloonBlack" />
+        <img src="img/ribbon2 small.png" alt="" class="ribbon1" />
+        <img src="img/ribbon2 big.png" alt="" class="ribbon2" />
+      </div>   
+    </main>
+
     <!--bootstrap JS插件-->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
