--- a/home.html
+++ b/home.html
@@ -59,6 +59,13 @@
         <img src="img/ribbon2 big.png" alt="" class="ribbon2" />
       </div>   
     </main>
+    <section>
+      <div>
+        <h1>happy birthday</h1>
+        <p>
+        </p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, culpa praesentium. Voluptatum expedita accusamus excepturi nobis ex labore quisquam recusandae aut natus harum minima, repellendus impedit, sint accusantium. Aliquid, dicta?
+      </div>
+    </section>
 
     <!--bootstrap JS插件-->
     <script
