--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/home.css" />
     <title>Kuan__HBD</title>
   </head>
   <body>
@@ -52,20 +52,26 @@
       </nav>
     </header>
     <main>
-      <div class="decorate">
-        <img src="img/ballonWhite.png" alt="" class="ballonWhite1" />
-        <img src="img/balloonBlack.png" alt="" class="balloonBlack" />
-        <img src="img/ribbon2 small.png" alt="" class="ribbon1" />
-        <img src="img/ribbon2 big.png" alt="" class="ribbon2" />
-      </div>   
-    </main>
-    <section>
-      <div>
-        <h1>happy birthday</h1>
-        <p>
-        </p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, culpa praesentium. Voluptatum expedita accusamus excepturi nobis ex labore quisquam recusandae aut natus harum minima, repellendus impedit, sint accusantium. Aliquid, dicta?
+      <div class="out">
+        <div class="decorate">
+          <img src="img/ballonWhite.png" alt="" class="ballonWhite1" />
+          <img src="img/balloonBlack.png" alt="" class="balloonBlack" />
+          <img src="img/ribbon2 small.png" alt="" class="ribbon1" />
+          <img src="img/ribbon2 big.png" alt="" class="ribbon2" />
+          <img src="img/ribbon2.png" alt="" class="ribbon3" />
+        </div>
+
+        <div class="text">
+          <h1>happy birthday</h1>
+          <p></p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, culpa
+          praesentium. Voluptatum expedita accusamus excepturi nobis ex labore
+          quisquam recusandae aut natus harum minima, repellendus impedit, sint
+          accusantium. Aliquid, dicta?
+        </div>
       </div>
-    </section>
+    </main>
+    <section></section>
 
     <!--bootstrap JS插件-->
     <script
