第二頁快完工

--- a/home.html
+++ b/home.html
@@ -41,7 +41,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <nav class="nav nav-pills nav-justified">
-              <a class="nav-link" href="#">ABOUT</a>
               <a class="nav-link active" aria-current="page" href="home.html"
                 >HOME</a
               >
@@ -50,13 +49,17 @@
           </div>
         </div>
       </nav>
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <strong>注意注意</strong> 說真的 我還沒想到這alert要打什麼：）顆顆
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
     </header>
     <main>
       <div class="out">
         <div class="decorate">
           <img src="img/ballonWhite.png" alt="" class="ballonWhite1" />
           <img src="img/balloonBlack.png" alt="" class="balloonBlack" />
-          <img src="img/ribbon2 small.png" alt="" class="ribbon1" />
+          <img src="img/ribbon2.png" alt="" class="ribbon1" />
           <img src="img/ribbon2 big.png" alt="" class="ribbon2" />
           <img src="img/ribbon2.png" alt="" class="ribbon3" />
         </div>
