--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                   >
                     別看了唄
                   </button>
-                  <a class="btn btn-primary" href="container.html" role="button"
+                  <a class="btn btn-primary" href="home.html" role="button"
                     >真有趣</a
                   >
                 </div>
