--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
-            <nav class="nav nav-pills nav-justified">
+            <nav class="nav">
               <a class="nav-link active" aria-current="page" href="home.html"
                 >HOME</a
               >
