--- a/home.html
+++ b/home.html
@@ -49,15 +49,7 @@
           </div>
         </div>
       </nav>
-      <!-- <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <strong>注意注意</strong> 說真的 我還沒想到這alert要打什麼：）顆顆
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="alert"
-          aria-label="Close"
-        ></button>
-      </div> -->
+
     </header>
     <main>
       <div class="out">
@@ -135,7 +127,7 @@
                   <a class="btn btn-close-white" href="index.html" role="button"
                     >棄獎而去</a
                   >
-                  <a class="btn btn-primary" href="home.html" role="button"
+                  <a class="btn btn-primary" href="story.html" role="button"
                     >光榮領獎</a
                   >
                 </div>
