--- a/story.html
+++ b/story.html
@@ -79,6 +79,7 @@
       </div>
       <img src="img/balloon.png" alt="" class="balloonstory1">
       <img src="img/balloon.png" alt="" class="balloonstory2">
+      <img src="img/LOGO.svg" alt="" class="logotea">
       
     
 
@@ -109,9 +110,9 @@
             流水帳開始 
              <br />好啦認真點，蠻意外會在前端班交到朋友<br />（雖然我已經後悔把你們加進摯友名單了，<br />因為這樣我有了25年來沒有的小🐔🐔）
             <br>更沒想到會變那麼好唄，畢竟第一印象說真的不是太友善<br />但還好我們對彼此的印象都是「兇、不好相處」<br />這件事就相互抵銷，不跟你計較，但加上之前有所誤解<br>（shit！這無法抵銷，我又輸一次）再次向您道歉🙇🏼‍♀️。
-            <br>仔細回想我好像一開始蠻意外你會密我做遊戲這部分<br>讓我心想可能似乎沒這麼難相處吧？不曉得：）<br>在團專認識後果真是我誤會了顆顆：）<br>你是很棒的人，有想法、勇於嘗試自己沒試過的事物、對自己有所堅持✊🏼<br>要有信心相信自己是最棒的也要懂得保護自己在任何事上都是，聽到沒？ 
-            <br>再說一次你剛剛有領獎了 所以你獲得了一項資格<br>不管怎樣，就算之後再忙或是樹林林口內湖距離多遠<br>你一通電話需要我就會過去啦
-            <br>最後生日快樂🎂24歲<br>你的夢想堅持下去一定可以達成的 愛你啦寶貝😊
+            <br>仔細回想我好像一開始蠻意外你會密我做遊戲這部分<br>讓我心想可能似乎沒這麼難相處吧？不曉得：）<br>在團專認識後果真是我誤會了顆顆：）<br>你是很棒的人，有想法、勇於嘗試自己沒試過的事物、對自己有所堅持✊🏼<br>要對自己有信心點也要懂得保護自己在任何事情上都是，聽到沒？ 
+            <br>再說一次你剛剛有領獎了 所以你獲得了一項資格。<br>不管怎樣，就算之後再忙或是樹林林口內湖距離多遠<br>你一通電話需要我就會飛奔過去啦
+            <br>最後24歲生日快樂🎂<br>你的夢想堅持下去一定可以達成的😊愛你啦寶貝
           </div>
           <div class="modal-footer">
             <button
